--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
           <div class="row">
             <div class="col-lg-4">
-              <img src="assets/img/me.jpg" class="img-fluid" alt="" />
+              <img src="img/me.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content">
               <h3>Android Apps Developer & Software Engineer .</h3>
@@ -204,23 +204,23 @@
                   <ul>
                     <li>
                       <i class="icofont-rounded-right"></i>
-                      <strong>Android Ar</strong>
+                      <strong>Android Development(Kotlin)</strong>
                     </li>
                     <li>
                       <i class="icofont-rounded-right"></i>
-                      <strong>Custom Backend integration</strong>
+                      <strong>Android MVVM Architecture Component</strong>
                     </li>
                     <li>
                       <i class="icofont-rounded-right"></i>
-                      <strong>Scraping and downloading mobile apps</strong>
+                      <strong>Clean Architecture</strong>
                     </li>
                     <li>
                       <i class="icofont-rounded-right"></i>
-                      <strong>Dictionary apps</strong>
+                      <strong>Android Jetpack Libraries</strong>
                     </li>
                     <li>
                       <i class="icofont-rounded-right"></i>
-                      <strong>Networking</strong>
+                      <strong>SOLID Principle</strong>
                     </li>
                   </ul>
                 </div>
@@ -228,28 +228,27 @@
                   <ul>
                     <li>
                       <i class="icofont-rounded-right"></i>
-                      <strong>Scheduling apps</strong>
+                      <strong>VCS(Git)</strong>
                     </li>
                     <li>
                       <i class="icofont-rounded-right"></i>
-                      <strong>Google Fit integration</strong>
+                      <strong>Dependency Injection(Koin)</strong>
                     </li>
                     <li>
                       <i class="icofont-rounded-right"></i>
-                      <strong>Camera</strong>
+                      <strong>Coroutine and Flow</strong>
                     </li>
                     <li>
                       <i class="icofont-rounded-right"></i>
-                      <strong>Calls (audio/video)</strong>
+                      <strong>Retrofit</strong>
                     </li>
                   </ul>
                 </div>
               </div>
               <p>
                 By profession, I am a software engineer working as an android
-                developer with about three a year of experience in android app
-                development and designing as I have been doing it since early
-                days in university. Building innovative android apps with
+                developer with about one a year of experience in android app
+                development and designing. Building innovative android apps with
                 architecture design for easy upgrades and bug fixes (CI/CD).
                 Ready to work on a product from requirement analysis to
                 deployment and testing android apps.
@@ -278,88 +277,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-monitor"></i></span>
-            </div>
-            <div class="service-content">
-              <h2 class="s-title">Web Design</h2>
-              <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-code-working"></i></span>
-            </div>
-            <div class="service-content">
-              <h2 class="s-title">Web Development</h2>
-              <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-camera"></i></span>
-            </div>
-            <div class="service-content">
-              <h2 class="s-title">Photography</h2>
-              <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
+        <div class="col-md-4" >
           <div class="service-box">
             <div class="service-ico">
               <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
             </div>
             <div class="service-content">
               <h2 class="s-title">Android Apps Development</h2>
-              <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-paintbrush"></i></span>
-            </div>
-            <div class="service-content">
-              <h2 class="s-title">Graphic Design</h2>
-              <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-stats-bars"></i></span>
-            </div>
-            <div class="service-content">
-              <h2 class="s-title">Marketing Services</h2>
               <p class="s-description text-center">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
